--- a/Strahovanie/src/sass/components/faq.scss
+++ b/Strahovanie/src/sass/components/faq.scss
@@ -10,6 +10,10 @@
     text-align: center;
     margin-bottom: 45px;
     line-height: 56px;
+    @media screen and (max-width: $tablet) {
+      @include font(26px, 26px);
+      margin-bottom: 32px;
+    }
   }
 }
 
@@ -24,6 +28,11 @@
     position: relative; 
     &.active {
       background-color: #F8FBFE;
+      @media screen and (max-width: $tablet) {
+        &::after{
+          display: none;
+        }
+      }
       &::after {
         position: absolute;
         content: '';
@@ -53,6 +62,10 @@
   &__trigger {
     padding: 32px 40px;
     max-height: 96px;
+    @media screen and (max-width: $tablet) {
+      max-height: max-content;
+      padding: 17px 16px;
+    }
   }
 }
 
@@ -71,6 +84,12 @@
     font-weight: 600;
     @include font( 22px, 22px);
     color: #1A1B20;
+    @media screen and (max-width: $tablet) {
+      max-width: 85%;
+      @include font(16px, 19px);
+      letter-spacing: 0.02em;
+      text-align: left;
+    }
   }
 
   &__btn {
@@ -87,8 +106,12 @@
 }
 
 .answer {
-  padding: 35px 0 40px 40px;
+  padding: 35px 0 39px 40px;
   display: none;
+  @media screen and (max-width: $tablet) {
+    padding: 24px 16px 18px;
+    border-bottom: 1px solid #D7E1E9;
+  }
 
   &__text {
     max-width: 1100px;
@@ -98,6 +121,10 @@
     @include font(16px, 27px);
     opacity: 0.8;
     margin-bottom: 23px;
+    @media screen and (max-width: $tablet) {
+      @include font(14px, 24px);
+      margin-bottom: 16px;
+    }
   }
 
   &__item {
@@ -122,6 +149,15 @@
       font-weight: 600;
       @include font(18px, 20px);
       color: $gray-blue;
+    }
+    @media screen and (max-width: $tablet) {
+      &::before{
+        width: 14px;
+        height: 14px;
+      }
+      >span{
+        @include font(15px, 18px);
+      }
     }
   }
 }
