--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -2340,10 +2340,10 @@ body {
   }
 
   .footer__logotype {
-    margin-bottom: 44x;
+    margin-bottom: 44px;
   }
 
-  .footer__logotype > img {
+  .footer__logotype > a > img {
     width: 185px;
     height: 41px;
   }
@@ -2422,7 +2422,7 @@ body {
   }
 
   .arrange {
-    border-color: #F1F8FE;
+    background-color: #F1F8FE;
     padding: 60px 0 10px 0;
   }
 
@@ -2430,10 +2430,14 @@ body {
     font-size: 26px;
     line-height: 1;
     margin-bottom: 40px;
+    margin-top: 2px;
+    margin-left: 12px;
   }
 
   .switch {
-    margin-bottom: 12px;
+    margin-bottom: 17px;
+    max-width: 318px;
+    margin-left: 5px;
   }
 
   .switch__index {
@@ -2529,14 +2533,18 @@ body {
     margin-bottom: 32px;
   }
 
+  .accordeon__wrapper.active > .trigger {
+    padding: 26px 16px;
+  }
+
   .accordeon__wrapper.active::after {
     display: none;
   }
 
   .accordeon__trigger {
-    max-height: -webkit-max-content;
-    max-height: -moz-max-content;
-    max-height: max-content;
+    max-height: -webkit-fit-content;
+    max-height: -moz-fit-content;
+    max-height: fit-content;
     padding: 17px 16px;
   }
 
@@ -2549,19 +2557,25 @@ body {
   }
 
   .answer {
-    padding: 24px 16px 18px;
+    padding: 23px 16px 18px;
     border-bottom: 1px solid #D7E1E9;
   }
 
   .answer__text {
     font-size: 14px;
     line-height: 1.7142857143;
-    margin-bottom: 16px;
+    margin-bottom: 13px;
+  }
+
+  .answer__item {
+    padding-left: 26px;
   }
 
   .answer__item::before {
     width: 14px;
     height: 14px;
+    top: 6%;
+    border-width: 3px;
   }
 
   .answer__item > span {
