--- a/Strahovanie/src/sass/components/insurance-arrange.scss
+++ b/Strahovanie/src/sass/components/insurance-arrange.scss
@@ -25,7 +25,7 @@
   padding: 90px 0 50px 0;
   position: relative;
   @media screen and (max-width: $tablet) {
-    border-color: $blue-pale;
+    background-color: $blue-pale;
     padding: 60px 0 10px 0;
   }
 
@@ -37,6 +37,8 @@
     @media screen and (max-width: $tablet) {
       @include font(26px, 26px);
       margin-bottom: 40px;
+      margin-top: 2px;
+      margin-left: 12px;
     }
   }
 }
@@ -45,13 +47,16 @@
 
   &__nav {
     position: relative;
+    
   }
 }
 
 .switch {
   margin-bottom: 80px;
   @media screen and (max-width: $tablet) {
-    margin-bottom: 12px;
+    margin-bottom: 17px;
+    max-width: 318px;
+    margin-left: 5px;
   }
 
   &__menu {
