--- a/Strahovanie/src/sass/components/tourism/insurance-tourism.scss
+++ b/Strahovanie/src/sass/components/tourism/insurance-tourism.scss
@@ -1,8 +1,14 @@
 .tourism {
   background-color: #F9FBFF;
+  @media screen and (max-width: $tablet) {
+    background-color: $white;
+  }
 
   &__container {
     padding: 50px;
+    @media screen and (max-width: $tablet) {
+      padding: 31px 0 50px;
+    }
   }
 
   &__form {
@@ -12,16 +18,28 @@
     border-radius: 10px;
     box-shadow: 0px 4px 32px rgba(123, 139, 181, 0.2);
     overflow: visible;
+    @media screen and (max-width: $tablet) {
+      width: 100%;
+      box-shadow: none;
+    }
   }
 }
 
 .touristic {
   padding: 50px 31px;
+  @media screen and (max-width: $tablet) {
+    padding: 0;
+  }
 
   &__header {
     @include font(48px, 48px);
     text-align: center;
     margin-bottom: 40px;
+    color: $blue-dark;
+    @media screen and (max-width: $tablet) {
+      @include font(36px, 36px);
+      margin-bottom: 33px;
+    }
   }
 
   &__input{
@@ -38,15 +56,24 @@
 
   &__trip {
     margin-bottom: 29px;
+    @media screen and (max-width: $tablet) {
+      margin-bottom: 24px;
+    }
   }
 
   &__tourists {
     margin-bottom: 32px;
+    @media screen and (max-width: $tablet) {
+      margin-bottom: 24px;
+    }
   }
 
   &__add {
     margin: 0 auto;
     margin-bottom: 24px;
+    @media screen and (max-width: $tablet) {
+      margin-bottom: 40px;
+    }
   }
 
   &__result {
@@ -62,12 +89,21 @@
     & >span{
       color: $white;
     }
-  }
+    @media screen and (max-width: $tablet) {
+      max-width: 100%;
+      & >span {
+        @include font(14px, 14px);
+      }
+    }
+  }  
 }
 
 .trip {
   display: flex;
   justify-content: space-between;
+  @media screen and (max-width: $tablet) {
+    flex-direction: column;
+  }
 
   &__param {
     font-family: $font-main;
@@ -82,10 +118,17 @@
   display: flex;
   flex-direction: column;
   width: 54.9%;
+  @media screen and (max-width: $tablet) {
+    width: 100%;
+    margin-bottom: 26px;
+  }
 
   &__ways {
     display: flex;
     margin-top: 5px;
+    @media screen and (max-width: $tablet) {
+      margin-top: 10px;
+    }
   }
 
   &__example {
@@ -122,6 +165,9 @@
   display: flex;
   flex-direction: column;
   width: 42.2%;
+  @media screen and (max-width: $tablet) {
+    width: 100%;
+  }
 
   &__title {
     display: flex;
@@ -134,11 +180,19 @@
     font-family: $font-main;
     font-weight: 700;
     margin-top: -4px;
+    @media screen and (max-width: $tablet) {
+      margin-top: 0;
+    }
   }
 
   &__choice {
     display: flex;
     justify-content: space-between;
+    @media screen and (max-width: $tablet) {
+      >div{
+        width: 156px;
+      }
+    }
   }
 
   &__input{
@@ -147,6 +201,10 @@
     appearance: none;
     background: url('../icons/select.svg') no-repeat;
     background-position: 88% 52%;
+    @media screen and (max-width: $tablet) {
+      max-width: 100%;
+      background-position: 92.5% 50%;
+    }
   }
 
   &__time{
@@ -155,6 +213,12 @@
     font-weight: normal;
     color: #8D94A4;
     margin-right: 4px;
+    @media screen and (max-width: $tablet) {
+      margin-right: 0;
+      display: inline-block;
+      margin-top: 4px;
+      margin-bottom: -1px;
+    }
   }
 
   &__to{
@@ -165,6 +229,10 @@
 }
 
 .tourists {
+  @media screen and (max-width: $tablet) {
+    width: 100vw;
+    margin-left: -16px;
+  }
 
   &__header {
     text-align: center;
@@ -173,6 +241,10 @@
     font-weight: 600;
     color: $blue-dark;
     margin-bottom: 21px;
+    @media screen and (max-width: $tablet) {
+      font-weight: 700;
+      margin-bottom: 18px;
+    }
   }
 
   &__info {
@@ -181,6 +253,13 @@
     border-radius: 12px;
     padding: 20px 30px 32px 30px;
     max-height: 161px;
+    @media screen and (max-width: $tablet) {
+      max-height: none;
+      padding: 16px 16px 34px;
+      border-radius: 0;
+      border-left: none;
+      border-right: none;
+    }
   }
 }
 
@@ -193,24 +272,37 @@
     color: #94A1AF;
     text-transform: uppercase;
     letter-spacing: 0.06em;
-    margin-bottom: 12px;    
+    margin-bottom: 12px; 
+      @media screen and (max-width: $tablet) {
+        margin-bottom: 14px;
+      }
   }
 
   &__info{
     display: flex;
     justify-content: space-between;
+    @media screen and (max-width: $tablet) {
+      flex-direction: column;
+    }
   } 
 
   &__birthday {
     display: flex;
     flex-direction: column;
     width: 200px;
+    @media screen and (max-width: $tablet) {
+      width: 100%;
+      margin-bottom: 25px;
+    }
   }
 
   &__goal {
     display: flex;
     flex-direction: column;
     width: 76%;
+    @media screen and (max-width: $tablet) {
+      width: 100%;
+    }
   }
 
   &__target {
@@ -218,6 +310,9 @@
     background: url('../icons/select.svg') no-repeat;
     background-color: $white;
     background-position: 97.5% 50%;
+    @media screen and (max-width: $tablet) {
+      background-position: 95% 50%;
+    }
   }
 }
 
