--- a/Strahovanie/src/sass/components/advantages.scss
+++ b/Strahovanie/src/sass/components/advantages.scss
@@ -1,11 +1,20 @@
 .advantages {
   background-color: #F9FBFF;
   padding: 50px 0 90px;
+  @media screen and (max-width: $tablet) {
+    padding-bottom: 0;
+  }
 
   &__header {
     text-align: center;
     line-height: 55px;
     margin-bottom: 60px;
+    @media screen and (max-width: $tablet) {
+      @include font(26px, 26px);
+      color: $blue-dark;
+      text-align: start;
+      margin-bottom: 40px;
+    }
   }
 
   &__wrapper {
@@ -17,12 +26,19 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  @media screen and (max-width: $tablet) {
+    flex-direction: column;
+    height: 250px;
+  }
 
   &__item {
     display: flex;
     align-items: center;
     &:not(:last-child){
       min-width: 321px;
+    }
+    @media screen and (max-width: $tablet) {
+      width: 100%;
     }
   }
 
@@ -35,6 +51,12 @@
     justify-content: center;
     align-items: center;
     margin-right: 16px;
+    @media screen and (max-width: $tablet) {
+      border: none;
+      height: 40px;
+      width: 40px;
+      margin-right: 21px;
+    }
   }
 
   &__description {
@@ -42,5 +64,8 @@
     font-weight: 600;
     @include font( 20px, 26px);
     color: #1A1B20;
+    @media screen and (max-width: $tablet) {
+      @include font(20px, 20px);
+    }
   }
 }
