--- a/Strahovanie/src/sass/components/samples.scss
+++ b/Strahovanie/src/sass/components/samples.scss
@@ -1,9 +1,17 @@
 .samples {
   padding: 93px 0 40px;
+  @media screen and (max-width: $tablet) {
+    padding: 72px 0 50px;
+  }
 
   &__header {
     text-align: center;
     margin-bottom: 52px;
+    @media screen and (max-width: $tablet) {
+      color: $blue-dark;
+      @include font(26px, 26px);
+      margin-bottom: 32px;
+    }
   }
 
   &__sort {
@@ -15,11 +23,28 @@
       button > span{
         font-weight: 600;
       }
+      @media screen and (max-width: $tablet) {
+        button{
+          padding: 0;
+          >span {
+            @include font( 16px, 19px);
+          }
+        }
+      }
+    }
+    @media screen and (max-width: $tablet) {
+      margin-bottom: 24px;
     }
   }
   
   &__nav{
     display: none;
+    @media screen and (max-width: $tablet) {
+      display: flex;
+      width: 98px;
+      justify-content: space-between;
+      margin: 32px auto 0 auto;
+    }
   }
 }
 
@@ -33,4 +58,12 @@
   box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.16);
   border-radius: 10px;
   background-color: $white;
+  @media screen and (max-width: $tablet) {
+    width: 156px;
+    height: 154px;
+    >img{
+      width: 88px;
+      height: 120px;
+    }
+  }
 }
