--- a/Ceramica/public/css/style.css
+++ b/Ceramica/public/css/style.css
@@ -3,6 +3,7 @@
   src: url("../fonts/GothamPro.woff2");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url("../fonts/GothamPro-Medium.woff2");
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   src: url("../fonts/GothamPro-Bold.woff2");
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
   src: url("../fonts/GothamPro-Light.woff2");
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -31,6 +35,7 @@
   src: url("../fonts/Gilroy-Regular.woff2");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 html {
@@ -140,7 +145,7 @@ body {
 }
 
 .header {
-  padding: 4px 0;
+  padding: 4px 0 3px;
   font-family: "Gotham Pro";
   font-weight: normal;
   text-transform: uppercase;
@@ -152,9 +157,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
@@ -166,8 +168,12 @@ body {
   width: 100%;
   height: 1px;
   background-color: #CFDAE3;
-  bottom: -9px;
+  bottom: -11px;
   z-index: 10;
+}
+
+.menu__image {
+  margin-right: 75px;
 }
 
 .menu__btn {
@@ -175,9 +181,28 @@ body {
   background-color: transparent;
   text-transform: uppercase;
   color: #40474E;
-  padding: 11px 35px;
   font-size: 14px;
   line-height: 1.1571428571;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 158px;
+  height: 40px;
+  font-family: "Gotham Pro";
+  font-weight: normal;
+  margin-right: 75px;
+  margin-top: -1px;
+}
+
+.menu__nav {
+  margin-right: 71px;
+  margin-top: -1px;
 }
 
 .nav {
@@ -187,16 +212,19 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-}
-
-.nav__item:not(:last-child) {
-  margin-right: 40px;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  width: 821px;
 }
 
 .nav__item {
   position: relative;
-  min-width: 38px;
   min-height: 19px;
+}
+
+.nav__item:last-child {
+  padding-right: 38px;
 }
 
 .nav__link {
@@ -215,6 +243,7 @@ body {
 
 .nav__lang {
   position: absolute;
+  width: 38px;
 }
 
 .lang:hover .lang__item {
@@ -225,7 +254,7 @@ body {
 
 .lang__item {
   display: none;
-  margin-bottom: 15px;
+  margin-bottom: 14px;
   font-size: 16px;
   line-height: 1.156875;
 }
@@ -260,10 +289,16 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  width: 174px;
+  height: 24px;
+  margin-top: 3px;
 }
 
-.toolbar__item:not(:last-child) {
-  margin-right: 26px;
+.toolbar__item {
+  width: 24px;
 }
 
 .toolbar__link > svg {
@@ -283,8 +318,8 @@ body {
   position: absolute;
   top: -10px;
   left: 18px;
-  width: 18px;
-  height: 18px;
+  width: 15px;
+  height: 15px;
   background-color: #AA182C;
   -webkit-transform: rotate(15deg);
   -ms-transform: rotate(15deg);
@@ -1214,10 +1249,6 @@ body {
   .menu__btn {
     font-size: 12px;
     line-height: 1.1833333333;
-  }
-
-  .nav__item:not(:last-child) {
-    margin-right: 30px;
   }
 
   .nav__link {
