--- a/Ceramica/src/sass/components/header.scss
+++ b/Ceramica/src/sass/components/header.scss
@@ -1,5 +1,5 @@
 .header {
-  padding: 4px 0;
+  padding: 4px 0 3px; 
   font-family: 'Gotham Pro';
   font-weight: normal;
   text-transform: uppercase;
@@ -8,7 +8,6 @@
 
   &__inner {
     display: flex;
-    justify-content: space-between;
     align-items: center;
   }
 
@@ -18,41 +17,53 @@
     width: 100%;
     height: 1px;
     background-color: $light-gray;
-    bottom: -9px;
+    bottom: -11px;
     z-index: 10;
   }
 }
 
 .menu {
+  &__image{
+    margin-right: 75px;
+  }
   &__btn {
     border: 1px solid $red-active;
     background-color: transparent;
     text-transform: uppercase;
     color: $text-base;
-    padding: 11px 35px;
     @include font(14px, 16.2px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 158px;
+    height: 40px;
+    font-family: $font-base;
+    font-weight: normal;
+    margin-right: 75px;
+    margin-top: -1px;
 
     @media screen and (max-width: 1400px) {
       @include font(12px, 14.2px);
     }
+  }
+  &__nav{
+    margin-right: 71px;
+    margin-top: -1px;
   }
 }
 
 .nav {
   display: flex;
   align-items: center;
+  justify-content: space-between;
+  width: 821px;
 
-  &__item:not(:last-child) {
-    margin-right: 40px;
-    
-    @media screen and (max-width: 1400px) {
-      margin-right: 30px;
-    }
-  }
   &__item{
     position: relative;
-    min-width: 38px;
     min-height: 19px;
+    &:last-child{
+      padding-right: 38px;
+    }
   }
 
   &__link {
@@ -73,6 +84,7 @@
 
   &__lang {
     position: absolute;
+    width: 38px;
   }
 }
 
@@ -83,7 +95,7 @@
 
   &__item {
     display: none;
-    margin-bottom: 15px;
+    margin-bottom: 14px;
     @include font(16px, 18.51px);    
 
     @media screen and (max-width: 1400px) {
@@ -114,10 +126,13 @@
 .toolbar {
   display: flex;
   align-items: center;
-  // .toolbar__item
+  justify-content: space-between;
+  width: 174px;
+  height: 24px;
+  margin-top: 3px;
 
-  &__item:not(:last-child) {
-    margin-right: 26px;
+  &__item{
+    width: 24px;
   }
 
   &__link {
@@ -137,8 +152,8 @@
       position: absolute;
       top: -10px;
       left: 18px;
-      width: 18px;
-      height: 18px;
+      width: 15px;
+      height: 15px;
       background-color: $red-active;
       transform: rotate(15deg);
     }
