--- a/Ceramica/public/css/style.css
+++ b/Ceramica/public/css/style.css
@@ -713,7 +713,7 @@ body {
 }
 
 .blog {
-  padding: 120px 0;
+  padding: 120px 0 110px;
   background-color: #F9F9FA;
 }
 
@@ -727,11 +727,19 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  margin-bottom: 70px;
 }
 
 .blog__btn {
-  padding-left: 63px;
-  padding-right: 63px;
+  width: 256px;
+  height: 54px;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 1px;
 }
 
 .blog__carousel {
@@ -749,8 +757,9 @@ body {
 }
 
 .card__description {
-  max-width: 340px;
-  margin: 20px auto 15px auto;
+  width: 340px;
+  height: 126px;
+  margin: 19px auto 14px auto;
 }
 
 .card__meta {
@@ -763,7 +772,7 @@ body {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin-bottom: 20px;
+  margin-bottom: 18px;
 }
 
 .card__type {
@@ -783,6 +792,7 @@ body {
 .card__date {
   font-size: 14px;
   line-height: 1.3;
+  margin-top: -5px;
 }
 
 .card__link {
@@ -828,7 +838,7 @@ body {
 
 .slide__wrapper {
   border: 1px solid transparent;
-  padding: 10px;
+  padding: 8px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
