--- a/Ceramica/src/sass/components/blog.scss
+++ b/Ceramica/src/sass/components/blog.scss
@@ -1,16 +1,20 @@
 .blog {
-  padding: 120px 0;
+  padding: 120px 0 110px;
   background-color: $white;
 
   &__cathword {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 70px;
   }
 
   &__btn {
-    padding-left: 63px;
-    padding-right: 63px;
+    width: 256px;
+    height: 54px;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1px;
   }
 
   &__carousel {
@@ -28,15 +32,16 @@
   position: relative;
 
   &__description {
-    max-width: 340px;
-    margin: 20px auto 15px auto;
+    width: 340px;
+    height: 126px;
+    margin: 19px auto 14px auto;
   }
 
   &__meta {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 20px;
+    margin-bottom: 18px;
   }
 
   &__type {
@@ -54,6 +59,7 @@
 
   &__date {
     @include font(14px, 18.2px);
+    margin-top: -5px;
   }
 
   &__link {
@@ -95,7 +101,7 @@
 .slide{
   &__wrapper{
     border: 1px solid transparent;
-    padding: 10px;
+    padding: 8px;
     display: flex;
     justify-content: center;
     align-items: center;
