--- a/Ceramica/src/sass/components/instagram.scss
+++ b/Ceramica/src/sass/components/instagram.scss
@@ -10,7 +10,7 @@
     max-width: 858px;
     margin: 0 auto;
     text-align: center;
-    margin-bottom: 80px;
+    margin-bottom: 81px;
     position: relative;
     &::before{
       position: absolute;
@@ -34,11 +34,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-height: 155px;
+    max-height: 157px;
     height: 100%;
     justify-content: space-between;
-    font-family: 'Gotham Pro';
+    font-family: $font-base;
     font-weight: normal;
+    margin-left: 2px;
 
     @media screen and (max-width: 1000px){
       max-height: 100px;
@@ -53,6 +54,7 @@
     border-radius: 50%;
     display: flex;
     justify-content: center;
+    margin-top: 2px;
 
     @media screen and (max-width: 1000px){
       width: 30px;
@@ -64,6 +66,8 @@
     @include font(24px, 28.8px);
     color: $text-base;
     cursor:default;
+    margin-left: 2px;
+    margin-top: -2px;
 
     @media screen and (max-width: 1000px) {
       @include font(20px, 24px);
@@ -78,8 +82,10 @@
     background-color: $blue-active;
     border: 1px solid $blue-active;
     cursor: pointer;
+    display: inline-block;
+    margin-left: 2px;
     >span{
-      font-family: 'Gotham Pro';
+      font-family: $font-base;
     }
     @media screen and (max-width: 1000px){
       padding: 8px 22px;
