--- a/Ceramica/public/css/style.css
+++ b/Ceramica/public/css/style.css
@@ -294,7 +294,7 @@ body {
   justify-content: space-between;
   width: 174px;
   height: 24px;
-  margin-top: 3px;
+  margin-top: 4px;
 }
 
 .toolbar__item {
@@ -316,7 +316,7 @@ body {
 .heart::after {
   content: "";
   position: absolute;
-  top: -10px;
+  top: -11px;
   left: 18px;
   width: 15px;
   height: 15px;
@@ -331,11 +331,11 @@ body {
   font-family: "Gotham Pro";
   font-weight: 700;
   font-size: 8px;
-  line-height: 1.3;
+  line-height: 1.25;
   color: #FFFFFF;
   display: block;
-  top: -6px;
-  left: 23px;
+  top: -7px;
+  left: 22px;
   z-index: 20;
 }
 
@@ -603,6 +603,15 @@ body {
   width: 52px;
   height: 52px;
   cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .projects__arrow:hover > svg {
@@ -614,7 +623,7 @@ body {
 }
 
 .cathword {
-  margin-bottom: 80px;
+  margin-bottom: 81px;
   font-family: "Gotham Pro";
   color: #40474E;
 }
@@ -675,7 +684,7 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 84px;
+  margin-bottom: 82px;
 }
 
 .sense__nav {
@@ -689,7 +698,7 @@ body {
 }
 
 .sense__header {
-  margin-bottom: 42px;
+  margin-bottom: 43px;
 }
 
 .sense__text {
@@ -728,6 +737,10 @@ body {
   -ms-flex-align: center;
   align-items: center;
   margin-bottom: 70px;
+}
+
+.blog__header {
+  margin-top: -3px;
 }
 
 .blog__btn {
@@ -920,7 +933,11 @@ body {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  margin-top: 2px;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 1px;
+  margin-left: 2px;
 }
 
 .instagram__link {
@@ -929,7 +946,7 @@ body {
   color: #40474E;
   cursor: default;
   margin-left: 2px;
-  margin-top: -2px;
+  margin-top: -5px;
 }
 
 .instagram__btn {
@@ -977,7 +994,8 @@ body {
 }
 
 .form {
-  padding: 75px 154px 104px 112px;
+  width: 736px;
+  height: 705px;
   margin-top: 5px;
   max-width: 735px;
   display: -webkit-box;
@@ -990,10 +1008,10 @@ body {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   background-color: #FFFFFF;
-  -webkit-box-align: baseline;
-  -ms-flex-align: baseline;
-  align-items: baseline;
   position: relative;
 }
 
@@ -1012,8 +1030,14 @@ body {
   transform: matrix(-0.26, 0.97, -0.97, -0.26, 0, 0);
 }
 
+.form__wrapper {
+  padding-right: 42px;
+  padding-bottom: 31px;
+}
+
 .form__header {
   margin-bottom: 18px;
+  padding-bottom: 2px;
 }
 
 .form__text {
@@ -1035,7 +1059,7 @@ body {
 .form__input {
   z-index: 10;
   margin-bottom: 17px;
-  padding: 15px 20px;
+  padding: 15px 18px;
   border: 1px solid #CFDAE3;
 }
 
@@ -1043,7 +1067,7 @@ body {
   font-family: "Gotham Pro";
   font-weight: 300;
   font-size: 16px;
-  line-height: 1.4;
+  line-height: 1.375;
   color: #98A4AE;
 }
 
@@ -1051,7 +1075,7 @@ body {
   font-family: "Gotham Pro";
   font-weight: 300;
   font-size: 16px;
-  line-height: 1.4;
+  line-height: 1.375;
   color: #98A4AE;
 }
 
@@ -1059,7 +1083,7 @@ body {
   font-family: "Gotham Pro";
   font-weight: 300;
   font-size: 16px;
-  line-height: 1.4;
+  line-height: 1.375;
   color: #98A4AE;
 }
 
@@ -1067,7 +1091,7 @@ body {
   font-family: "Gotham Pro";
   font-weight: 300;
   font-size: 16px;
-  line-height: 1.4;
+  line-height: 1.375;
   color: #98A4AE;
 }
 
@@ -1075,17 +1099,19 @@ body {
   font-family: "Gotham Pro";
   font-weight: 300;
   font-size: 16px;
-  line-height: 1.4;
+  line-height: 1.375;
   color: #98A4AE;
 }
 
 .form textarea {
   resize: none;
   height: 100px;
-  margin-bottom: 13px;
+  margin-bottom: 16px;
+  padding: 12px 18px;
 }
 
 .form__btn {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1154,7 +1180,7 @@ body {
 
 .navigation {
   display: grid;
-  grid-template-columns: 0.94fr 0.95fr 1.2fr 0.99fr;
+  grid-template-columns: 0.94fr 0.95fr 1.22fr 0.981fr;
   font-family: "Gotham Pro";
   font-weight: 400;
   color: #FFFFFF;
@@ -1170,7 +1196,7 @@ body {
   font-size: 18px;
   line-height: 1.3888888889;
   font-weight: 400;
-  margin-bottom: 13px;
+  margin-bottom: 12px;
 }
 
 .navigation__item {
@@ -1202,7 +1228,7 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 18px;
 }
 
 .catalog__btn > span {
