--- a/Strahovanie/src/sass/components/footer.scss
+++ b/Strahovanie/src/sass/components/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: $blue-pale;
-  padding-top: 80px;
+  padding-top: 82px;
   padding-bottom: 50px;
 
   @media screen and (max-width: $tablet){
@@ -72,7 +72,7 @@
 }
 
 .basement {
-  padding-top: 45px;
+  padding-top: 44px;
   @media screen and (max-width: $tablet) {
     display: none;
   }
@@ -135,7 +135,8 @@
     display: flex;
     align-items: center;    
     >svg {
-      margin-right: 8px;    
+      margin-right: 8px;  
+      margin-top: 3px;  
       &:hover {
         fill: $marine;
       }
@@ -147,7 +148,7 @@
   }
 
   &__dev{
-    margin-top: 4px;
+    margin-top: 2px;
     display: flex;
     align-items: center;
   }
@@ -161,7 +162,12 @@
     margin-right: 10px;
   }
 
-  &__developer>svg:hover{
-    fill: $marine;
+  &__developer{ 
+    >svg{
+      &:hover {
+        fill: $marine;
+      }
+      margin-top: 4px;
+    }     
   }
 }
