--- a/Ceramica/src/sass/components/header.scss
+++ b/Ceramica/src/sass/components/header.scss
@@ -147,26 +147,25 @@
 
 .heart {
   position: relative;
-    &::after {
-      content: '';
-      position: absolute;
-      top: -11px;
-      left: 18px;
-      width: 15px;
-      height: 15px;
-      background-color: $red-active;
-      transform: rotate(15deg);
-    }
+  &__wrapper{
+    width: 15px;
+    height: 15px;
+    background-color: $red-active;
+    transform: rotate(15deg);
+    position: absolute;
+    top: -11px;
+    left: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
   &__amount {
-    position: absolute;
     font-family: $font-base;
     font-weight: 700;
-    @include font(8px, 10px);
+    @include font(8px, 8px);
     color: $clear-white;
-    display: block;
-    top: -7px;
-    left: 22px;
-    z-index: 20;
+    transform: rotate(-15deg);
+    margin-top: 1px;
   }
 }
